--- a/style1.css
+++ b/style1.css
@@ -2,7 +2,6 @@
 
 .gameboy-panel {
     background: linear-gradient(145deg, #1a1a1a, #2d2d2d);
-    border-radius: 25px 25px 0px 25px;
     padding: 25px;
     width: 320px;
     box-shadow: 
@@ -66,71 +65,22 @@
     50% { opacity: 0.5; }
     100% { opacity: 1; }
   }
+
   
-  .controls {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-    margin-top: 40px;
-  }
-  
-  .d-pad {
-    position: relative;
-    width: 120px;
-    height: 120px;
-    left: 60px;
-    bottom: 35px;
-  }
-  
-  .d-btn {
-    position: absolute;
-    width: 35px;
-    height: 35px;
-    background: #121212;
-    border: none;
-    cursor: pointer;
-    transition: all 0.2s ease;
-    box-shadow: 
-      0 4px 8px rgba(0, 0, 0, 0.3),
-      inset 0 0 5px rgba(255, 255, 255, 0.1);
-  }
-  
-  .d-btn:active {
-    transform: scale(0.95);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-  }
-  
-  .d-center {
-    position: absolute;
-    top: 42.5px;
-    left: 42.5px;
-    width: 35px;
-    height: 35px;
-    background: #121212;
-    border-radius: 5px;
-  }
-  
-  .up { top: 0; left: 42.5px; border-radius: 8px 8px 0 0; }
-  .right { top: 42.5px; right: 0px; border-radius: 0 8px 8px 0; }
-  .down { bottom: 0; left: 42.5px; border-radius: 0 0 8px 8px; }
-  .left { top: 42.5px; left: 0; border-radius: 8px 0 0 8px; }
+
   
   .action-buttons {
     display: flex;
     gap: 17px;
-    margin-top: 40px;
     margin: 100px 0 0 0;
-    position: relative;
     top: 7px;
     right: 70px;
 
   }
   
   .action-btn {
-    width: 50px;
     height: 50px;
-    border-radius: 50%;
+    border-radius: 10%;
     background: linear-gradient(145deg, #121212, #1a1a1a);
     border: none;
     color: #fff;
@@ -161,3 +111,8 @@
       inset 0 0 5px rgba(0, 0, 0, 0.2);
   }
   
+.fight {
+  position: relative;
+  top: 10px;
+  left: 100px;
+}
