--- a/style2.css
+++ b/style2.css
@@ -3,14 +3,12 @@
 .grid-panel {
     background: linear-gradient(145deg, #1a1a1a, #2d2d2d);
     /* border-radius: 25px; */
-    padding: 20px;
+    padding: 40px 14px 0px 12px;
     width: 354px;
     box-shadow: 
       20px 20px 60px #1a1a1a,
       -20px -20px 60px #2d2d2d;
-    position: relative;
-    /* top: 131px; */
-    /* right: 30px; */
+    height: 530px;
   }
   .search-container {
     margin-bottom: 25px;
@@ -48,7 +46,7 @@
   .pokedex-container {
     display: flex;
     /* gap: 30px; */
-    padding: 30px;
+    padding: 38px;
     min-height: 100vh;
     background: #121212;
     align-items: center;
@@ -67,7 +65,11 @@
     .grid-panel {
       width: 100%;
       max-width: 420px;
+      height: 100%;
+      padding-bottom:15px ;
     }
+  
+  
   }
   
   /* Add some base styles */
