--- a/styles/homeStyle2.css
+++ b/styles/homeStyle2.css
@@ -148,6 +148,7 @@ html {
   padding: 10px;
   mask-image: linear-gradient(to bottom, transparent 0%, black 5%, black 95%, transparent 100%);
   -webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 5%, black 95%, transparent 100%);
+  -moz-mask-image: linear-gradient(to bottom, transparent 0%, black 5%, black 95%, transparent 100%);
   scroll-behavior: smooth;
   scrollbar-color: #43B047 #1a1a1a;
 }
